--- a/docker-devops-app/docker-compose.yml
+++ b/docker-devops-app/docker-compose.yml
@@ -21,6 +21,7 @@ services:
       POSTGRES_DB: devopsdb
     volumes:
       - db_data:/var/lib/postgresql/data
+      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
 
   prometheus:
     image: prom/prometheus
