--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,15 +19,15 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build & Push backend image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/backend ./backend
-        docker push ${{ secrets.DOCKER_USERNAME }}/backend
+   # - name: Build & Push backend image
+   #   run: |
+    #    docker build -t ${{ secrets.DOCKER_USERNAME }}/backend ./backend
+    #    docker push ${{ secrets.DOCKER_USERNAME }}/backend
 
-    - name: Build & Push frontend image
-      run: |
-        docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend ./frontend
-        docker push ${{ secrets.DOCKER_USERNAME }}/frontend
+   # - name: Build & Push frontend image
+   #   run: |
+    #    docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend ./frontend
+     #   docker push ${{ secrets.DOCKER_USERNAME }}/frontend
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@master
