--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,35 +10,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Login to DockerHub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-   # - name: Build & Push backend image
-   #   run: |
-    #    docker build -t ${{ secrets.DOCKER_USERNAME }}/backend ./backend
-    #    docker push ${{ secrets.DOCKER_USERNAME }}/backend
+      - name: Build & Push backend image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/backend:latest ./backend
+          docker push ${{ secrets.DOCKER_USERNAME }}/backend:latest
 
-   # - name: Build & Push frontend image
-   #   run: |
-    #    docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend ./frontend
-     #   docker push ${{ secrets.DOCKER_USERNAME }}/frontend
+      - name: Build & Push frontend image
+        run: |
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/frontend:latest ./frontend
+          docker push ${{ secrets.DOCKER_USERNAME }}/frontend:latest
 
-    - name: Deploy to EC2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USER }}
-        key: ${{ secrets.EC2_KEY }}
-        script: |
-          docker pull ${{ secrets.DOCKER_USERNAME }}/backend
-          docker pull ${{ secrets.DOCKER_USERNAME }}/frontend
-          cd ~/DevStack-Lite/docker-devops-app
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d
+      - name: Deploy to EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          script: |
+            docker pull ${{ secrets.DOCKER_USERNAME }}/backend:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/frontend:latest
+            cd ~/DevStack-Lite/docker-devops-app
+            docker-compose down
+            docker-compose pull
+            docker-compose up -d
